--- a/app/src/main/res/layout/activity_Player_ten.xml
+++ b/app/src/main/res/layout/activity_Player_ten.xml
@@ -5,39 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Ten"
-    android:background="@drawable/bg9">
+    android:background="@drawable/bg9"
+    tools:ignore="MissingDefaultResource">
 
     <ImageView
-        android:id="@+id/imageView23"
+        android:id="@+id/Close"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/no"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
 
     <ImageView
-        android:id="@+id/imageView22"
+        android:id="@+id/Likes"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="194dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/like2"
-        app:layout_constraintStart_toEndOf="@+id/imageView23"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/Close"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
 
     <ImageView
+        android:id="@+id/Downloads"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/download2"
-        app:layout_constraintStart_toEndOf="@+id/imageView22"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/Likes"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/textView24"
+        android:id="@+id/Title"
         android:layout_width="264dp"
         android:layout_height="50dp"
         android:layout_marginTop="384dp"
@@ -53,7 +58,7 @@
 
 
     <TextView
-        android:id="@+id/textView25"
+        android:id="@+id/sevendys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
@@ -64,16 +69,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        app:layout_constraintTop_toBottomOf="@+id/Title" />
 
     <ImageView
+        android:id="@+id/spotify"
         android:layout_width="374dp"
         android:layout_height="188dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView25"
-        android:background="@drawable/spotify"/>
+        app:layout_constraintTop_toBottomOf="@+id/sevendys"
+        android:background="@drawable/spotify"
+        android:contentDescription="@string/todo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
