--- a/app/src/main/res/layout/activity_narrator_eight.xml
+++ b/app/src/main/res/layout/activity_narrator_eight.xml
@@ -5,41 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Eight"
-    android:background="@drawable/bg8">
+    android:background="@drawable/bg8"
+    tools:ignore="MissingDefaultResource">
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/Strelka"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/strelka2" />
+        app:srcCompat="@drawable/strelka2"
+        android:contentDescription="@string/todo" />
 
     <ImageView
-        android:id="@+id/imageView17"
+        android:id="@+id/Likes"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="194dp"
         android:layout_marginTop="50dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintStart_toEndOf="@+id/Strelka"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/like" />
+        app:srcCompat="@drawable/like"
+        android:contentDescription="@string/todo" />
 
     <ImageView
-        android:id="@+id/imageView18"
+        android:id="@+id/Downloads"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="50dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/Likes"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/downloads" />
+        app:srcCompat="@drawable/downloads"
+        android:contentDescription="@string/todo" />
 
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/Restful"
         android:layout_width="250dp"
         android:layout_height="46dp"
         android:layout_marginStart="20dp"
@@ -49,23 +53,23 @@
         android:textColor="@color/light"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18" />
+        app:layout_constraintTop_toBottomOf="@+id/Course" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/HappyMorning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="211dp"
         android:fontFamily="@font/montserratbold"
-        android:text="Happy Morning"
+        android:text="@string/happy_morning"
         android:textColor="@color/strong"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView16" />
+        app:layout_constraintTop_toBottomOf="@+id/Strelka" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/Course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -75,21 +79,21 @@
         android:textColor="@color/light"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/HappyMorning" />
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/favourites"
         android:layout_width="318dp"
         android:layout_height="18dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/favourites"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
+        app:layout_constraintTop_toBottomOf="@+id/Restful"
         android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/Narrator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -99,10 +103,10 @@
         android:textColor="@color/strong"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView19" />
+        app:layout_constraintTop_toBottomOf="@+id/favourites" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/MaleVoice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -112,7 +116,7 @@
         android:textColor="@color/purt"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+        app:layout_constraintTop_toBottomOf="@+id/Narrator" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -123,8 +127,8 @@
         android:text="@string/female_voice"
         android:textColor="@color/light"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/textView21"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+        app:layout_constraintStart_toEndOf="@+id/MaleVoice"
+        app:layout_constraintTop_toBottomOf="@+id/Narrator" />
 
 
     <ImageView
@@ -135,17 +139,19 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/focus_attention"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+        app:layout_constraintTop_toBottomOf="@+id/MaleVoice"
+        android:contentDescription="@string/todo" />
 
     <ImageView
-        android:id="@+id/imageView21"
+        android:id="@+id/Bodysound"
         android:layout_width="125dp"
         android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/body_scan"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Atention" />
+        app:layout_constraintTop_toBottomOf="@+id/Atention"
+        android:contentDescription="@string/todo" />
 
     <ImageView
         android:layout_width="174dp"
@@ -154,7 +160,8 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/making_happines"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView21" />
+        app:layout_constraintTop_toBottomOf="@+id/Bodysound"
+        android:contentDescription="@string/todo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
