--- a/app/src/main/res/layout/activity_explorescreen_four.xml
+++ b/app/src/main/res/layout/activity_explorescreen_four.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".Four"
     android:background="@drawable/bg3"
-    android:id="@+id/Four">
+    android:id="@+id/Four"
+    tools:ignore="MissingDefaultResource">
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/Logo"
         android:layout_width="133dp"
         android:layout_height="30dp"
         android:layout_marginTop="47dp"
@@ -20,7 +21,7 @@
         android:contentDescription="@string/todo" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/HiText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="78dp"
@@ -32,7 +33,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/Logo" />
 
     <TextView
         android:layout_width="317dp"
@@ -45,7 +46,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/HiText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
