--- a/app/src/main/res/layout/activity_Player_ten.xml
+++ b/app/src/main/res/layout/activity_Player_ten.xml
@@ -47,7 +47,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="384dp"
         android:fontFamily="@font/montserratbold"
-        android:text="@string/daily_calm"
+        android:text="@string/focus_attention"
         android:textAlignment="center"
         android:textColor="@color/strong"
         android:textSize="34sp"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:fontFamily="@font/oswaldmedium"
-        android:text="@string/CALMMMMMMMMM"
+        android:text="@string/calmmmmm"
         android:textColor="@color/light"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
