--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bg"    >
+    android:background="@drawable/bg">
 
     <TextView
         android:id="@+id/textView"
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/logo" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -41,14 +41,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/illustration" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
-        android:text="@string/we_are_what_we_do"
+        android:text="@string/title"
         android:textColor="@color/strong"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -62,7 +62,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/oswaldlight"
-        android:text="@string/thousand"
+        android:text="@string/textone"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
         />
 
     <ImageView
-        android:id="@+id/signUp"
+        android:id="@+id/imageView2"
         android:layout_width="374dp"
         android:layout_height="63dp"
         android:layout_marginTop="62dp"
@@ -81,8 +81,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:srcCompat="@drawable/button"
-
-        android:contentDescription="@string/todo" />
+        android:contentDescription="@string/button" />
 
     <TextView
         android:id="@+id/textView4"
@@ -96,7 +95,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.32"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -106,7 +105,7 @@
         android:text="@string/log_in"
         android:textColor="#8E97FD"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/signUp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
