--- a/app/src/main/res/layout/activity_explorescreen_four.xml
+++ b/app/src/main/res/layout/activity_explorescreen_four.xml
@@ -36,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/Logo" />
 
     <TextView
+        android:id="@+id/text4"
         android:layout_width="317dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
